@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 586 2006-11-24 05:15:50Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 591 2006-11-24 20:22:49Z knut.osmundsen@oracle.com $
 
 
 DEPTH = ../..
@@ -27,8 +27,9 @@ kmk_DEFS = \
 	CONFIG_NO_DEFAULT_SUFFIX_RULES \
 	CONFIG_NO_DEFAULT_VARIABLES \
 	CONFIG_WITH_EXTENDED_NOTPARALLEL \
-    CONFIG_WITH_INCLUDEDEP \
+	CONFIG_WITH_INCLUDEDEP \
 	CONFIG_WITH_TOUPPER_TOLOWER \
+	CONFIG_PRETTY_COMMAND_PRINTING \
 	KMK \
 	\
 	KMK_HELPERS \
